--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 	<body>
 		<div class="content">
 			<div id="qrcode"></div>
+			<div id="send">
+				<input id="data">
+				<button id="sendBtn">Send</button>
+			</div>
 		</div>
 		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
