added received message history

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,14 @@
 		<div class="content">
 			<div id="qrcode"></div>
 			<div id="send">
-				<input id="data">
-				<button id="sendBtn">Send</button>
+				<form id="sendForm">
+					<input id="data">
+					<input id="sendBtn" type="submit" value="Send">
+				</form>	
+				<ul id="history">
+					<li>test2</li>
+					<li>test1</li>
+				</ul>
 			</div>
 		</div>
 		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
