--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,7 @@
 					<input id="data">
 					<input id="sendBtn" type="submit" value="Send">
 				</form>	
-				<ul id="history">
-					<li>test2</li>
-					<li>test1</li>
-				</ul>
+				<ul id="history"></ul>
 			</div>
 		</div>
 		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
