--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
 		<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="js/qrcode.min.js"></script>
+		<script src="js/util.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
