disabled input autocomplete

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 			<div id="qrcode"></div>
 			<div id="send">
 				<form id="sendForm">
-					<input id="data">
+					<input id="data" autocomplete="off">
 					<input id="sendBtn" type="submit" value="Send">
 				</form>	
 				<ul id="history"></ul>
