--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,24 @@
 				width: 256px;
 				margin: 100px auto;
 			}
+			a.bookmarklet {
+				background: #32a0eb none repeat scroll 0 0;
+				border-radius: 4px;
+				text-decoration: none;
+				color: #fff;
+				display: inline-block;
+				padding: 3px 6px;
+			}
 		</style>
 	</head>
 	<body>
 		<div class="content">
 			<div id="qrcode"></div>
 			<div id="send">
+				<div id="bookmarklet">
+					Bookmarklet: <a class="bookmarklet" href="javascript:(function()%7Bjavascript%3A(function()%7Bjavascript%3A(function()%7Bvar%20s%3Ddocument.createElement('SCRIPT')%3Bs.type%3D'text%2Fjavascript'%3Bs.src%3D'https%3A%2F%2Fqrsync-bulut.rhcloud.com%2Fs%3Fm%3D'%2BencodeURIComponent(''%2Bwindow.getSelection()%7C%7Cwindow.location.href)%2B'%26r%3D'%2BMath.random()%3Bdocument.getElementsByTagName('head')%5B0%5D.appendChild(s)%7D)()%7D)()%7D)()">QRSync</a>
+				</div>
+				<p/>
 				<form id="sendForm">
 					<input id="data" autocomplete="off">
 					<input id="sendBtn" type="submit" value="Send">
