self updating bookmark

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 			<div id="qrcode"></div>
 			<div id="send">
 				<div id="bookmarklet">
-					Bookmarklet: <a class="bookmarklet" href="javascript:(function()%7Bjavascript%3A(function()%7Bjavascript%3A(function()%7Bvar%20s%3Ddocument.createElement('SCRIPT')%3Bs.type%3D'text%2Fjavascript'%3Bs.src%3D'https%3A%2F%2Fqrsync-bulut.rhcloud.com%2Fs%3Fm%3D'%2BencodeURIComponent(''%2Bwindow.getSelection()%7C%7Cwindow.location.href)%2B'%26r%3D'%2BMath.random()%3Bdocument.getElementsByTagName('head')%5B0%5D.appendChild(s)%7D)()%7D)()%7D)()">QRSync</a>
+					Bookmarklet: <a class="bookmarklet" href="javascript:(function()%7Bvar%20s%3Ddocument.createElement('SCRIPT')%3Bs.type%3D'text%2Fjavascript'%3Bs.src%3D'https%3A%2F%2Fqrsync-bulut.rhcloud.com%2Fpublic%2Fbookmarklet%2Cjs%3Fr%3D'%2BMath.random()%3Bdocument.getElementsByTagName('head')%5B0%5D.appendChild(s)%7D)()">QRSync</a>
 				</div>
 				<p/>
 				<form id="sendForm">
