added meta charset, link rel icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title>QRSync</title>
+		<meta charset='utf-8'>
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 		<style>
 			.content {
 				width: 256px;
