added chrome-push capability

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<title>QRSync</title>
 		<meta charset='utf-8'>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="manifest" href="manifest.json">
 		<style>
 			.content {
 				width: 256px;
